feat: configure Open Graph tags and image

--- a/index.html
+++ b/index.html
@@ -1,29 +1,35 @@
 <!doctype html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Auditoria Pro | Auditoria Comercial Humana</title>
-    <meta name="description" content="Mostramos exatamente onde sua empresa perde vendas e dinheiro. Auditoria comercial humana com análise de conversas e relatório em até 72h.">
-    <meta name="author" content="Auditoria Pro" />
 
-    
-    
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/ymIXWAACaTgvqZKgHCzDt5lPusD3/social-images/social-1767558928796-WhatsApp Image 2026-01-04 at 17.27.41.jpeg">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Auditoria Pro | Auditoria Comercial Humana</title>
+  <meta name="description"
+    content="Mostramos exatamente onde sua empresa perde vendas e dinheiro. Auditoria comercial humana com análise de conversas e relatório em até 72h.">
+  <meta name="author" content="Auditoria Pro" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@AuditoriaPro" />
-    <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/ymIXWAACaTgvqZKgHCzDt5lPusD3/social-images/social-1767558928796-WhatsApp Image 2026-01-04 at 17.27.41.jpeg">
-    <meta property="og:title" content="Auditoria Pro | Auditoria Comercial Humana">
-  <meta name="twitter:title" content="Auditoria Pro | Auditoria Comercial Humana">
-  <meta property="og:description" content="Mostramos exatamente onde sua empresa perde vendas e dinheiro. Auditoria comercial humana com análise de conversas e relatório em até 72h.">
-  <meta name="twitter:description" content="Mostramos exatamente onde sua empresa perde vendas e dinheiro. Auditoria comercial humana com análise de conversas e relatório em até 72h.">
-  <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/gpt-engineer-file-uploads/ymIXWAACaTgvqZKgHCzDt5lPusD3/uploads/1767558932324-WhatsApp Image 2026-01-04 at 17.27.41.jpeg">
+
+
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://auditoriapro-bfdnzroy3-luccamm11s-projects.vercel.app/" />
+  <meta property="og:title" content="Auditoria Pro | Auditoria Comercial Humana" />
+  <meta property="og:description"
+    content="Mostramos exatamente onde sua empresa perde vendas e dinheiro. Auditoria comercial humana com análise de conversas e relatório em até 72h." />
+  <meta property="og:image" content="/og-image.png" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@AuditoriaPro" />
+  <meta name="twitter:title" content="Auditoria Pro | Auditoria Comercial Humana" />
+  <meta name="twitter:description"
+    content="Mostramos exatamente onde sua empresa perde vendas e dinheiro. Auditoria comercial humana com análise de conversas e relatório em até 72h." />
+  <meta name="twitter:image" content="/og-image.png" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
