fix: use absolute url for og image

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <meta property="og:title" content="Auditoria Pro | Auditoria Comercial Humana" />
   <meta property="og:description"
     content="Mostramos exatamente onde sua empresa perde vendas e dinheiro. Auditoria comercial humana com análise de conversas e relatório em até 72h." />
-  <meta property="og:image" content="/og-image.png" />
+  <meta property="og:image" content="https://auditoriapro-bfdnzroy3-luccamm11s-projects.vercel.app/og-image.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@AuditoriaPro" />
   <meta name="twitter:title" content="Auditoria Pro | Auditoria Comercial Humana" />
   <meta name="twitter:description"
     content="Mostramos exatamente onde sua empresa perde vendas e dinheiro. Auditoria comercial humana com análise de conversas e relatório em até 72h." />
-  <meta name="twitter:image" content="/og-image.png" />
+  <meta name="twitter:image" content="https://auditoriapro-bfdnzroy3-luccamm11s-projects.vercel.app/og-image.png" />
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 
