--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="twitter:description"
     content="Mostramos exatamente onde sua empresa perde vendas e dinheiro. Auditoria comercial humana com análise de conversas e relatório em até 72h." />
   <meta name="twitter:image" content="https://auditoriapro.vercel.app/og-image.png" />
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
 </head>
 
 <body>
