feat: implement SEO improvements and add SEO skill

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <meta name="twitter:description"
     content="Descubra onde sua empresa está perdendo vendas sem perceber. Auditoria comercial humana com diagnóstico claro e plano prático em até 72h." />
   <meta name="twitter:image" content="https://audiencify.lovable.app/og-image.png" />
+  <link rel="canonical" href="https://eur-auditoriapro.vercel.app/" />
   <link rel="icon" type="image/png" href="/favicon.png" />
 </head>
 
